# html-parser-benchmark

./: LICENSE  LICENSE.txt  README.txt  sample-body.html  sample-head.html  sample-wikipedia.html  sample.html
java-parser/: .gitignore  build.gradle  settings.gradle
java-parser/src/jmh/java/com/innahema/java_parser_benchmark/: JsoupBenchmark.java  StreamBench.java
java-parser/src/test/java/com/innahema/java_parser_benchmark/: JsoupBenchmarkTest.java
rust-parsers/: Cargo.toml
rust-parsers/benches/: my_benchmark.rs
rust-parsers/src/: lib.rs
