[package]
name = "rust-parsers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25.2"
html5ever-arena-dom = "0.1.0"
markup5ever_rcdom = "0.1.0"
markup5ever = "0.10.1"
markup5ever_arcdom = "0.1.2"
scraper = "0.13.0"
ego-tree = "0.6.2"
html_parser = "0.6.3"
kuchiki = "0.8.1"
typed-arena = "2.0.1"
tl = "0.7.5"

[dev-dependencies]
criterion = "0.3"
#[patch.crates-io]
#"markup5ever:0.10.1" = "0.11.0"
[[bench]]
name = "my_benchmark"
harness = false
